# trip_planner

./: .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  flights_doc.html  pyproject.toml  requirements-dev.txt  requirements.txt  trip_planner.ipynb  uvicorn.err
docs/: README.md  WRITEUP.md  architecture.md  design.md  diagram.txt  feature-slice-architecture.md  feature-slice-design.md  feature-slice-diagram.txt  feature-slice-implementation.md  implementation.md
examples/: example.md  extra_research_request_example.json  extra_research_response_example.json  filan_plan_response_example.json  final_plan_request_example.json  start_request_example.json  start_response_example.json
frontend/: README.md  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.tsx  index.css
frontend/src/components/: ErrorMessage.tsx  LoadingSpinner.tsx  PlanningResults.tsx  ResearchPlanForm.tsx  SelectionInterface.tsx  TripForm.tsx
frontend/src/hooks/: useApi.ts  useApiHealth.ts  useTripPlanning.ts
frontend/src/services/: api.ts
frontend/src/types/: api.ts
src/api/: app.py  dependencies.py  response_builder.py  schemas.py  workflow_service.py
src/core/: agents_builder.py  builders.py  config.py  domain.py  graph_builder.py  nodes.py  post_processing.py  prompts.py  reducer.py  schemas.py  types.py
src/pipelines/: rag.py  schemas.py
src/services/: __init__.py  amadeus.py  geocoding.py  trip_advisor.py
src/services/amadeus/: __init__.py  client.py  schemas.py  tools.py
src/services/geocoding/: __init__.py  geocoding.py
src/services/reddit/: __init__.py  client.py  schemas.py  tools.py
src/services/tavily_search/: __init__.py  client.py  schemas.py  tools.py
src/services/trip_advisor/: __init__.py  client.py  schemas.py  tools.py
src/tools/: internet_search.py  reddit_search.py
src/workflows/: __init__.py  planner.py
tests/: conftest.py  test_api.py  test_domain.py  test_post_processing.py  test_rag_pipeline.py  test_reducer.py  test_services.py  test_workflow_nodes.py
