[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trip-planner"
version = "0.1.0"
description = "Agentic travel planning platform that orchestrates LangGraph research agents and a FastAPI surface."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Trip Planner Maintainers" }]
keywords = ["travel", "planner", "langgraph", "langchain", "fastapi", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-openai>=0.0.5",
    "langchain-xai>=0.0.1",
    "langchain-text-splitters>=0.0.1",
    "langchain-tavily>=0.0.1",
    "langgraph>=0.0.20",
    "httpx>=0.25.0",
    "requests>=2.31.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.2.2",
    "transformers>=4.35.0",
    "torch>=2.0.0",
    "amadeus>=8.0.0",
    "python-multipart>=0.0.6",
    "sentry-sdk[fastapi]>=2.20.0",
    "praw>=7.7.0"
]

[project.optional-dependencies]
testing = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "nbmake>=1.4.0"
]

[project.urls]
Homepage = "https://github.com/danil123zxc/trip_planner"
Repository = "https://github.com/danil123zxc/trip_planner"
Documentation = "https://github.com/danil123zxc/trip_planner/tree/main/docs"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
asyncio_mode = "auto"
